--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.aar
 *.ap_
 *.aab
+*.idea
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -44,6 +45,7 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
@@ -83,3 +85,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+.idea/compiler.xml
+local.properties
+local.properties
